--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,7 +60,7 @@
       }
     }
   </script>
-  <div class="login">
+  <!-- <div class="login">
 
     <section class="vh-100">
       <div class="container-fluid h-custom">
@@ -73,13 +73,13 @@
             <form>
               <h1>login</h1></br>
 
-              <!-- Email input -->
+              Email input
               <div class="form-outline mb-4">
                 <input type="text" id="username" class="form-control form-control-lg" placeholder="Enter Username"
                   required />
               </div>
 
-              <!-- Password input -->
+              Password input
               <div class="form-outline mb-3">
                 <input type="password" id="password" class="form-control form-control-lg" placeholder="Enter password"
                   required />
@@ -98,7 +98,7 @@
         </div>
       </div>
     </section>
-  </div>
+  </div> -->
 
   <script src="js/bootstrap.bundle.js"></script>
   <script src="./login.js"></script>
