--- a/frontend/index.html
+++ b/frontend/index.html
@@ -101,7 +101,7 @@
   </div> -->
 
   <script src="js/bootstrap.bundle.js"></script>
-  <script src="./login.js"></script>
+  <!-- <script src="./login.js"></script> -->
 
 </body>
 
